<resources>
    <string name="app_name">FingerCampus</string>
    <string name="Title">一点校园</string>
    <string name="Account">手机号</string>
    <string name="Code">密码</string>
    <string name="Help">登录遇到问题？</string>
    <string name="todo">TODO</string>
    <string name="register">register</string>
    <string name="register_t">注册</string>
    <string name="logo">logo</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="tip1">请输入您的手机号</string>
    <string name="tip2">请输入6到16位密码</string>
    <string name="tip3">验证码</string>
    <string name="clicktoget">点击获取</string>
    <string name="repair">报修</string>
    <string name="repair_position">请输入报修地点</string>
    <string name="repair_des">请输入问题描述</string>
    <string name="submit">提交</string>
    <string name="openCamera">打开相机</string>
    <string name="selectFromAlbum">从相册选取</string>
    <string name="picCancel">取消</string>
    <string name="recording">录音</string>
    <string name="recordingCancel">取消</string>
    <string name="recordingSubmit">提交</string>
    <!--    <string name="icons">在此添加图标Unicode代码</string>-->

    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="recording_icon">&#xe64a;</string>
    <string name="album_icon">&#xe64b;</string>
    <string name="return_icon">&#xe609;</string>
    <string name="add_icons">&#xe686;</string>
    <string name="recording_icon1">&#xe610;</string>
    <string name="user">个人中心</string>
    <string name="main">主页</string>
    <string name="toolbar_more">更多</string>
    <string name="back">返回</string>
    <string name="timetable">课程表</string>
    <string name="toolbar_scan">扫一扫</string>
    <string name="toolbar_timetable">课程表</string>
    <string name="toolbar_attendance">签到</string>
    <string name="addCourse">&#xe686;</string>
    <string name="add">&#xe686;</string>
    <string name="classroom">教室</string>
    <string name="classroon_manage">教室管理</string>
    <string name="repair_manage">报修管理</string>
    <string name="qiandaoguanli">签到详情</string>
    <string name="about">关于</string>
    <string name="title">一点校园</string>
    <string name="function">一点校园致力于在校学生实现手机签到，手机报修，课程表查询等模块。简便易用，易于使用。</string>

    <string name="toolbar_apply">教室申请</string>
    <string name="name">申请人姓名</string>
    <string name="phone">联系电话\t</string>
    <string name="classroom_number">教室编号</string>
    <string name="date">教室使用日期</string>
    <string name="users_number">使用人数</string>
    <string name="section">教室使用节次</string>
    <string name="myapplication">我的申请</string>
    <string name="myrepair">报修单</string>
    <string name="number">编号</string>
    <string name="call">联系管理</string>
    <string name="apply">我的申请</string>
    <string name="allapply">教室申请列表</string>

    <string name="scan_code">签到扫描</string>
    <string name="open_flash">打开闪光灯</string>
    <string name="gallery">打开相册</string>

    <string name="type">报修类型</string>
    <string name="position">地点</string>
    <string name="state">状态</string>
    <string name="description">描述</string>

    <string name="chuli">未完成</string>
    <string name="usercenter">个人中心</string>
    <string name="edit">编辑</string>
    <string name="addstudentinfo">填写学生信息</string>
    <string name="save">保存</string>
    <string name="bind">绑定</string>
    <string name="attendancedetails">签到明细</string>
    <string name="stdname">学生姓名</string>
    <string name="stdsex">性别</string>
    <string name="stdcollege">院系</string>
    <string name="stdclass">班级</string>
    <string name="csname">课程名称</string>
    <string name="csday">星期</string>
    <string name="lsattendance">考勤状态</string>
    <string name="csweek">周次</string>
</resources>
