<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_repair"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:layout_gravity="start"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:textColor="#ffffff"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:textStyle="normal"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:hint="@string/name"
        android:inputType="text"/>
    <EditText
        android:id="@+id/number"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:hint="@string/phone"
        android:inputType="number"/>
    <EditText
        android:id="@+id/classroom_number"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:hint="@string/classroom_number"/>
    <EditText
        android:id="@+id/date"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:hint="@string/date"
        android:inputType="date"/>
    <EditText
        android:id="@+id/users_number"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:hint="@string/users_number"
        android:inputType="number"/>
    <EditText
        android:id="@+id/section"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:hint="@string/section"/>
    <Button
        android:layout_marginTop="47dp"
        android:id="@+id/submit"
        android:background="@color/firstColor"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"/>
</LinearLayout>