<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_attendancedetails"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#00000000"
            android:text="@string/return_icon"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/attendancedetails"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="normal" />

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id"
            android:textAlignment="center"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/number"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/csname"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:text="@string/csname"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/csweek"
            android:textAlignment="center"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/csweek"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/csday"
            android:textAlignment="center"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/csday"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/stdname"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/stdname"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/stdcollege"
            android:textAlignment="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/stdcollege"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lsattendance"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/lsattendance"
            android:layout_weight="1"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>