<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myrepair"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#00000000"
            android:text="@string/return_icon"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/repair"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/fresh"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="刷新"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/phone"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/type"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/position"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:layout_weight="4"/>
        <TextView
            android:id="@+id/description"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_weight="5"/>
        <TextView
            android:id="@+id/state"
            android:textAlignment="center"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:layout_weight="6"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>