<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/account"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:background="@drawable/edit_round"
        android:hint="@string/Account" />
    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:background="@drawable/edit_round"
        android:hint="@string/Code"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/loginorup_btn"
        android:layout_marginTop="86dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Help"
        android:paddingTop="100dp"/>
</RelativeLayout>