<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/firstColor"
        >
        <Button
            android:id="@+id/repair_back"
            android:layout_width="50dp"
            android:background="@color/secondColor"
            android:layout_height="match_parent"
            android:text="@string/return_icon"
            android:textColor="#ffffff"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:gravity="center_vertical"
            android:textSize="40sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <Spinner
        android:id="@+id/repair_select"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:entries="@array/repair_type"/>
    <EditText
        android:id="@+id/repair_position"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/repair_position"
        tools:ignore="Autofill,TextFields" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <EditText
        android:id="@+id/repair_des"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:hint="@string/repair_des"
        android:gravity="top|start"
        tools:ignore="Autofill,TextFields" />
        <Button
            android:id="@+id/repair_plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/firstColor"
            android:layout_alignBottom="@+id/repair_des"
            android:layout_alignEnd="@+id/repair_des"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"/>
        <LinearLayout
            android:id="@+id/repair_plus_ll"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="-10dp"
            android:layout_below="@+id/repair_des"
            android:layout_alignEnd="@+id/repair_des"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/secondColor">
            <Button
                android:id="@+id/repair_audio"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:background="#ffffff"
                tools:ignore="ButtonStyle"
                android:text="@string/recording_icon"
                android:layout_gravity="center"
                android:textColor="#03ca74"/>
            <Button
                android:id="@+id/repair_picture"
                android:layout_marginStart="15dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="#ffffff"
                tools:ignore="ButtonStyle"
                android:text="@string/album_icon"
                android:layout_gravity="center"
                android:textColor="#03ca74"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/submit"
        android:background="@color/firstColor"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"/>
</LinearLayout>
