<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ToolBarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/toolbar_user"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="normal"
            android:textColor="#FFFFFF"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:id="@+id/toolGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:alignmentMode="alignBounds">

            <Button
                android:id="@+id/logout"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:layout_height="160dp"
                android:layout_gravity="fill"
                android:background="#25C6FC"
                android:text="@string/logout"
                android:textSize="40sp"
                android:textColor="#EDF0AA" />
            <Button
                android:id="@+id/repair"
                android:layout_columnWeight="1"
                android:layout_margin="1dp"
                android:layout_height="160dp"
                android:layout_gravity="fill"
                android:background="#FF534D"
                android:text="@string/repair"
                android:textSize="40sp"
                android:textColor="#00FFBB" />
            <Button
                android:id="@+id/apply"
                android:layout_columnWeight="1"
                android:layout_height="160dp"
                android:background="#E2213F"
                android:text="@string/toolbar_apply"
                android:textSize="20sp"
                android:textColor="#2341FF"/>
        </GridLayout>

    </ScrollView>

</LinearLayout>